# tagbuddy

./: Cargo.toml  README.md
src/: error.rs  label.rs  lib.rs  manager.rs  query.rs  storage.rs  tag.rs  test.rs
src/parse/: adapters.rs  mod.rs
tests/: blog.rs
