[package]
name = "tagbuddy"
version = "0.1.0"
edition = "2021"
publish = false


#============================================================================
# Dependencies

#----------------------------------------------------------------------------
# Normal Dependencies

[dependencies.convert_case]
version = "0.6.0"
optional = true

[dependencies.either]
version = "1.8.1"
optional = true

[dependencies.itertools]
version = "0.11.0"

[dependencies.regex]
version = "1.8.4"
optional = true

[dependencies.string-interner]
version = "0.14.0"
default-features = false
# Omit the `serde` dependency to improve compilation speed.
features = ["std", "inline-more", "backends"]

[dependencies.typed-builder]
version = "0.14.0"

#----------------------------------------------------------------------------
# Development Dependencies

[dev-dependencies]
anyhow = "1.0.71"


#============================================================================
# Features

[features]
default = ["convert_case", "either", "regex"]
